# Mome

./: .gitignore  README.md  gradle.properties  mome.jks  settings.gradle
OpenCV/: build.gradle
OpenCV/libcxx_helper/: dummy.cpp
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt  blazefacencnn.cpp  face.cpp  face.h  landmark.cpp  ndkcamera.cpp  ndkcamera.h  peleenetssd_seg.cpp  peleenetssd_seg.h
app/src/main/res/drawable/: background.xml  bg_item_video.xml  bg_shape_circle_20dp.xml  circle_bg.xml  control_button_bg.xml  control_button_selected_bg.xml  control_panel_bg.xml  custom_progress_bar.xml  custom_progressbar.xml  ic_arrow_down.xml  ic_arrow_right.xml  ic_camera_front.xml  ic_camera_left.xml  ic_camera_rear.xml  ic_camera_right.xml  ic_distance_detection.xml  ic_full_select.xml  ic_thumb.xml  play_sel.xml  pop_background.xml  progress_vertical_drawable2.xml  seekbar_style.xml  selector_mute.xml  selector_play.xml  selector_tab.xml  selector_video_second_select.xml  selector_video_together_select.xml  selector_voice.xml  status_panel_bg.xml  status_text_bg.xml  stop_button_bg.xml
app/src/main/res/layout/: activity_blaze.xml  activity_detect.xml  activity_home.xml  activity_init.xml  activity_mome.xml  activity_test.xml  activity_video.xml  activity_video_fu.xml  all_adapter.xml  all_view.xml  app_adapter.xml  other_adapter.xml  rep_view.xml
docs/: 测试报告.md  用户使用手册.md  需求规格说明书.md  项目部署说明文档.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+38 files in other folders)
